# OpenFisca-Japan-MCP

./: README.md  implementation_plan.md  prompt.md  pyproject.toml  test.py
.github/workflows/: publish.yml
src/openfisca_japan_mcp/: __init__.py  cli.py  config.py  sdk.py  server.py
